--- a/arch/x86/configs/acer_sw5-012_defconfig
+++ b/arch/x86/configs/acer_sw5-012_defconfig
@@ -7690,6 +7690,7 @@ CONFIG_INTEL_TELEMETRY=m
 CONFIG_MLX_PLATFORM=m
 CONFIG_MLX_CPLD_PLATFORM=m
 CONFIG_INTEL_TURBO_MAX_3=y
+CONFIG_INTEL_CHT_USB_MUX=m
 CONFIG_SILEAD_DMI=y
 CONFIG_PMC_ATOM=y
 CONFIG_CHROME_PLATFORMS=y
