Add CM3218 driver ambient light sensor

--- a/arch/x86/configs/acer_sw5-012_defconfig
+++ b/arch/x86/configs/acer_sw5-012_defconfig
@@ -8072,6 +8072,7 @@ CONFIG_APDS9300=m
 CONFIG_APDS9960=m
 CONFIG_BH1750=m
 CONFIG_BH1780=m
+CONFIG_CM3218=m
 CONFIG_CM32181=m
 CONFIG_CM3232=m
 CONFIG_CM3323=m
