--- a/arch/x86/configs/acer_sw5-012_defconfig
+++ b/arch/x86/configs/acer_sw5-012_defconfig
@@ -8074,6 +8074,7 @@ CONFIG_BH1750=m
 CONFIG_BH1780=m
 CONFIG_CM3218=m
 CONFIG_CM32181=m
+CONFIG_CM3218X=m
 CONFIG_CM3232=m
 CONFIG_CM3323=m
 CONFIG_CM36651=m
