Fix kernel config, add PMIC_OPREGION

--- a/arch/x86/configs/acer_sw5-012_defconfig
+++ b/arch/x86/configs/acer_sw5-012_defconfig
@@ -772,7 +772,11 @@ CONFIG_ACPI_APEI_EINJ=m
 CONFIG_DPTF_POWER=m
 CONFIG_ACPI_WATCHDOG=y
 CONFIG_ACPI_EXTLOG=m
-# CONFIG_PMIC_OPREGION is not set
+CONFIG_PMIC_OPREGION=y
+CONFIG_CRC_PMIC_OPREGION=y
+CONFIG_XPOWER_PMIC_OPREGION=y
+CONFIG_BXT_WC_PMIC_OPREGION=y
+CONFIG_CHT_WC_PMIC_OPREGION=y
 CONFIG_ACPI_CONFIGFS=m
 CONFIG_SFI=y
 
@@ -6803,6 +6807,7 @@ CONFIG_USB_G_WEBCAM=m
 # USB Power Delivery and Type-C drivers
 #
 CONFIG_TYPEC=m
+CONFIG_TYPEC_WCOVE=m
 CONFIG_TYPEC_UCSI=m
 # CONFIG_UCSI_ACPI is not set
 CONFIG_USB_LED_TRIG=y
@@ -8072,7 +8077,7 @@ CONFIG_APDS9300=m
 CONFIG_APDS9960=m
 CONFIG_BH1750=m
 CONFIG_BH1780=m
-CONFIG_CM3218=m
+# CONFIG_CM3218 is not set
 CONFIG_CM32181=m
 CONFIG_CM3218X=m
 CONFIG_CM3232=m
